--- a/package.json
+++ b/package.json
@@ -1,28 +1,42 @@
 {
   "dependencies": {
+    "archiver": "^5.3.0",
     "axios": "^0.21.1",
     "canvas": "^2.7.0",
     "case": "^1.6.3",
     "chai": "^4.3.4",
     "colors": "^1.4.0",
+    "copy-paste": "^1.3.0",
+    "crypto": "^1.0.1",
     "diff": "^5.0.0",
     "dotenv": "^8.2.0",
     "exceljs": "^4.2.1",
+    "extract-zip": "^2.0.1",
     "faker": "^5.5.3",
     "find": "^0.3.0",
+    "fs-extra": "^10.0.0",
+    "highlight.js": "^11.2.0",
     "iconv-lite": "^0.6.2",
     "jquery": "^3.6.0",
     "jsdom": "^16.5.3",
     "korean-name-generator": "^1.0.4",
     "lodash": "^4.17.21",
+    "markdown-it": "^12.2.0",
+    "markdown-it-anchor": "^8.3.0",
+    "markdown-it-table-of-contents": "^0.5.2",
     "mocha": "^8.4.0",
+    "moment": "^2.29.1",
+    "node-cmd": "^5.0.0",
+    "node-notifier": "^10.0.0",
     "nodemailer": "^6.6.0",
+    "opn": "^6.0.0",
     "oracledb": "^5.1.0",
     "puppeteer": "^8.0.0",
     "puppeteer-extra": "^3.1.18",
     "puppeteer-extra-plugin-stealth": "^2.7.8",
     "replace-in-file": "^6.2.0",
     "sql-formatter": "^4.0.2",
+    "sqlite3": "^5.0.2",
     "typescript": "^4.2.4",
     "util": "^0.12.3",
     "vizion": "^2.2.1"
